fix: elements on homepage not aligned and too big

--- a/client/style/main.css
+++ b/client/style/main.css
@@ -5,4 +5,11 @@ html, body {
     scroll-behavior: smooth;
     color: #FFF;
     font-family: Arial, serif;
+    display: flex;
+}
+
+.page-title {
+    font-weight: 700;
+    font-size: 1.5rem;
+    margin: 20px 20px 30px 20px;
 }
