--- a/client/style/menu.css
+++ b/client/style/menu.css
@@ -51,12 +51,13 @@
     color: #6A6B70;
 }
 .categories {
-    margin-top: -45%;
-    width: 78%;
+    margin-top: -25%;
+    width: 90%;
     font-size: 20px;
 }
 .categories ul {
-    list-style-type: none;;
+    list-style-type: none;
+    padding: 0;
 }
 li.category {
     padding: 0;
@@ -76,4 +77,7 @@ li.category:hover {
 }
 .list-icon {
     padding-right: 20px;
+}
+.logout {
+    color: #D62976;
 }
