--- a/client/style/right-panel.css
+++ b/client/style/right-panel.css
@@ -1,6 +1,6 @@
 .right-panel {
     font-family: Arial, serif;
-    width: 34vw;
+    width: 27vw;
     height: 100vh;
     position: fixed;
     border-left: solid 1px #6A6B70;
